--- a/topografiya/templates/leader/edit_pdowork.html
+++ b/topografiya/templates/leader/edit_pdowork.html
@@ -1,7 +1,7 @@
 {% extends 'master.html' %}
 
 {% load static %}
-{% block title %} Ишни бошлаб {% endblock %}
+{% block title %} Ишни бошлаш {% endblock %}
 {% block content%}
 
 {% block stylecontent %}
