--- a/topografiya/templates/login.html
+++ b/topografiya/templates/login.html
@@ -79,7 +79,7 @@
                         <div class="form-group">
                             <input type="submit" style="background-color: #168eea;color: white;width: 100%" class="btn btn-block" value="Тизимга кириш">
                         </div>
-{#                        <p>Aкаунтингиз йўқми?<a style="color: #168eea" class="ms-2" href="sign-up.html">Aкаунт яратиш</a></p>#}
+                        <p>Aкаунтингиз йўқми?<a style="color: #168eea" class="ms-2" href="{% url 'register' %}">Aкаунт яратиш</a></p>
                     </form>
                 </div>
             </div>
