--- a/topografiya/templates/leader/workers.html
+++ b/topografiya/templates/leader/workers.html
@@ -14,13 +14,20 @@
             <div class="container-fluid">
                 <div class="page-header">
                     <div class="row">
-                        <div class="col-sm-12">
+                        <div class="col-sm-6">
                             <h3>Ходимлар</h3>
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="{% url 'index' %}"><i class="fa fa-home f-20"></i></a></li>
                                 <li class="breadcrumb-item"><a href="{% url 'workers' %}">Ходимлар</a></li>
                             </ol>
                         </div>
+
+                        <div class="col-sm-6 text-end">
+                            <a href="#" class="btn btn-primary"><i class="fa fa-users"></i>
+                               Янги мурожатчилар
+                            </a>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -30,11 +37,15 @@
 
                     {% for worker in workers %}
 
-                    <div class="col-xl-6 col-md-6">
+                    <div class="col-xl-4 col-md-4">
                         <div class="card shadow">
                             <div class="blog-box blog-list row m-20">
-                                <div class="col-xl-6 col-12">
-
+                                <div class="col-xl-12 col-12">
+                                    {% if worker.live == '1' %}
+                                        <div class="ribbon ribbon-right ribbon-success">ID : <b>{{ forloop.counter }}</b></div>
+                                        {% else %}
+                                        <div class="ribbon ribbon-right ribbon-danger">ID : <b>{{ forloop.counter }}</b></div>
+                                    {% endif %}
                                     <div class="media"><img class="img-80 rounded-circle" src="{% static 'assets/images/user/5.jpg' %}">
                                         <div class="media-body">
                                             <p class="m-0 f-w-600">{{ worker.full_name}}</p>
@@ -62,25 +73,13 @@
                                         <div class="col-4 font-primary">50 балл</div>
                                     </div>
                                 </div>
-                                <div class="col-xl-6 col-12">
-                                    <div class="blog-details">
-                                        <div class="blog-date"><span>01</span></div>
-                                        <div class="blog-bottom-content">
-                                            <p class="mt-0">Ходим {{ worker.full_name }} Ҳозирги кунда дала назоратини тубдан бўшқариш лойиҳсида...</p>
-                                        </div>
-                                        <div class="project-status mt-4">
-                                            <div class="media mb-0">
-                                                <p class="m-0">70%</p>
-                                                <div class="media-body text-end"><span>Бажарилди</span></div>
-                                            </div>
-                                            <div class="progress" style="height: 5px">
-                                                <div class="progress-bar-animated bg-primary progress-bar-striped" role="progressbar" style="width: 70%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
                                 <a href="#">
-                                    <button class="btn btn-outline-primary w-100 m-t-15">Батавсил маълумот</button>
+                                    {% if worker.live == '1' %}
+                                        <a href="{% url 'show_worker' id=worker.id %}" class="btn btn-outline-success m-t-15">Батавсил маълумот</a>
+                                        {% else %}
+                                        <a href="{% url 'show_worker' id=worker.id %}" class="btn btn-outline-danger m-t-15">Батавсил маълумот</a>
+                                    {% endif %}
+
                                 </a>
                             </div>
                         </div>
